Fixed CX2T headers

--- a/cx2t/unittest/build.xml
+++ b/cx2t/unittest/build.xml
@@ -1,6 +1,7 @@
 <!--
  This file is released under terms of BSD license
  See LICENSE file for more information
+ @author: not specified
 -->
 
 <project name="claw-test" default="main" basedir="."
