--- a/.travis.yml
+++ b/.travis.yml
@@ -57,9 +57,9 @@ matrix:
         - ant
         - ant-optional
 before_install:
-- wget https://dl.bintray.com/sonarsource/SonarQube/org/sonarsource/scanner/cli/sonar-scanner-cli/3.2.0.1227/sonar-scanner-cli-3.2.0.1227-linux.zip
-- unzip sonar-scanner-cli-3.2.0.1227-linux.zip
-- export PATH=$PATH:$TRAVIS_BUILD_DIR/sonar-scanner-3.2.0.1227-linux/bin
+- wget https://dl.bintray.com/sonarsource/SonarQube/org/sonarsource/scanner/cli/sonar-scanner-cli/4.6.0.2311/sonar-scanner-cli-4.6.0.2311-linux.zip
+- unzip sonar-scanner-cli-4.6.0.2311-linux.zip
+- export PATH=$PATH:$TRAVIS_BUILD_DIR/sonar-scanner-4.6.0.2311-linux/bin
 - sonar-scanner --help
 before_script:
 - export FC=$FC_COMPILER
@@ -70,14 +70,13 @@ before_script:
 script:
 - export CLAW_SRC=$(pwd)
 - python "./scripts/check_author_license.py"
-- cd -
 - "./scripts/check_lib_split"
 - cd scripts
 - "./run.shellcheck"
 - cd ..
 - mkdir build
 - cd build
-- cmake -DCMAKE_INSTALL_PREFIX=$HOME/claw ..
+- cmake -S ${CLAW_SRC} -DCMAKE_INSTALL_PREFIX=$HOME/claw ..
 - make -j
 - make install
 - make run-tests
