Switched tests to run bash script instead of jar

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -6,9 +6,14 @@
 
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}.in
-  ${CMAKE_CURRENT_BINARY_DIR}/bin/${CLAW_COMPILER_FILE}
+  ${CMAKE_CURRENT_BINARY_DIR}/bin/tmp/${CLAW_COMPILER_FILE}
   @ONLY
 )
+file(COPY ${CMAKE_CURRENT_BINARY_DIR}/bin/tmp/${CLAW_COMPILER_FILE}
+  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin
+  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
+  GROUP_EXECUTE)
+
 
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/${CLAWFC_CONF_FILE}.in
