--- a/driver/tests/src/Resources.java.in
+++ b/driver/tests/src/Resources.java.in
@@ -11,6 +11,6 @@ public class Resources
 {
     public static final Path DIR = Paths.get("@CLAWFC_TESTS_RES_DIR@");
     public static final Path INT_INSTALL_DIR = Paths.get("@INT_CLAW_HOME@");
-    public static final Path DRIVER_PATH() { return INT_INSTALL_DIR.resolve("bin/@CLAWFC_JAR@"); }
+    public static final Path DRIVER_PATH() { return INT_INSTALL_DIR.resolve("bin/@CLAW_COMPILER_FILE@"); }
 
 };
