Update sonar version

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,10 +59,10 @@ matrix:
 before_install:
 - git submodule init
 - git submodule update
-- wget https://dl.bintray.com/sonarsource/SonarQube/org/sonarsource/scanner/cli/sonar-scanner-cli/3.2.0.1227/sonar-scanner-cli-3.2.0.1227-linux.zip
-- unzip sonar-scanner-cli-3.2.0.1227-linux.zip
-- export PATH=$PATH:$TRAVIS_BUILD_DIR/sonar-scanner-3.2.0.1227-linux/bin
-- sonar-scanner --help
+- wget https://dl.bintray.com/sonarsource/SonarQube/org/sonarsource/scanner/cli/sonar-scanner-cli/4.6.0.2311/sonar-scanner-cli-4.6.0.2311-linux.zip
+- unzip sonar-scanner-cli-4.6.0.2311-linux.zip
+- export PATH=$PATH:$TRAVIS_BUILD_DIR/sonar-scanner-4.6.0.2311-linux/bin
+- sonar-scanner --version
 before_script:
 - export FC=$FC_COMPILER
 - export CC=$CC_COMPILER
