--- a/resources/eclipse/cx2t-unit-tests.project.in
+++ b/resources/eclipse/cx2t-unit-tests.project.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cx2t-ut</name>
+	<name>cx2t-unit-tests</name>
 	<comment></comment>
 	<projects>
 	</projects>
